test/conformance/kuttl/generated-validating-admission-policy-reports/reports/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-pass
  labels:
    app: nginx-1
spec:
  replicas: 7
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
