test/conformance/kuttl/generated-validating-admission-policy-reports/reports/03-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |
      if kubectl get events --output=custom-columns=REASON:.reason,KIND:.involvedObject.kind,NAME:.involvedObject.name | grep -E 'PolicyViolation.*ValidatingAdmissionPolicy.*check-deployment-replicas'
      then 
        echo "Test succeeded. Policy Violation event was generated."
        exit 0 
      else 
        echo "Test failed. Policy Violation event was not generated."
        exit 1
      fi
